<resources>
    <string name="app_name">Bitácoras UTD</string>
    <string name="observaciones">Observaciones</string>
    <string name="bit_cora_de_laboratorio">Bitácora de laboratorio</string>
    <string name="entrar">Entrar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="utd">UTD</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="bit">Bit</string>
    <string name="somos_b_falos">Somos búfalos</string>
    <string name="somos_utd">Somos UTD</string>
    <string name="imagen_de_usuario">Imagen de usuario</string>
    <string name="bienvenido_a">Bienvenido(a)</string>
    <string name="qr">QR</string>
    <string name="bit_c">Bitác.</string>
    <string name="laboratorios">Laboratorios</string>
    <string name="inicio">Inicio</string>
    <string name="user">Usuario:</string>
    <string name="invitado">Invitado</string>
    <string name="imagen_usuario">Imagen_usuario</string>
    <string name="cuenta">Cuenta</string>
</resources>
